--- a/style.css
+++ b/style.css
@@ -60,6 +60,26 @@ body{
     margin-left:2px;
 }
 
+/* Cursor */
+.paint{
+    width:3rem;
+    height: 3rem;
+    background-image: url(./assets/paint.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 2rem 2rem;
+    position: absolute;
+}
+
+.brush{
+    width:3rem;
+    height: 3rem;
+    background-image: url(./assets/brush.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 2rem 2rem;
+    position: absolute;
+}
 
 @media screen and (max-width: 912px) {
     .canvas{
